# cuttlecal

./: .gitignore  README.md  color_picker.py  package-lock.json  start_cuttlecal.bat  test.py
Code Snippets/: 3d-interpolation.py  3d_plot.js  capture-latency.cpp  capture-latency.py  data-interpolation.py  exposure-testing.py  qr_generator.js  settings.py  whitepoint-testing.py
c++/: CMakeCache.txt  CMakeLists-old.txt  CMakeLists.txt  image_processing.cpp  image_processing.h  main.cpp  measurement.h  syncqueue.h  vcpkg.json
c++/zxing-cpp/: CMakeLists.txt
images/: block-diagram  cuttlecal.ai  raw_grey.psd
javascript/backend/: mock_http.js  package-lock.json  package.json
javascript/frontend/: babel.config.js  jest.config.js  package-lock.json  package.json
javascript/frontend/src/: 3DGraphVisualizer.js  App.js  ColourChangeScreen.js  Home.js  MyNavbar.js  useFullScreen.js
javascript/new_frontend/: package-lock.json  package.json
javascript/new_frontend/src/: App.js  InterpolationDataContext.js
javascript/new_frontend/src/components/: FileUpload.js  Graph.js  GraphContainer.js  MyNavbar.js
javascript/new_frontend/src/pages/: Calibration.js  Compare.js  Home.js  Image.js  Upload.js
javascript/new_frontend/src/styles/: Calibration.css  FileUpload.css  GraphContainer.css  Home.css  Upload.css
javascript/new_frontend/src/workers/: parserWorker.js
python/: color-profile-reconciler  color-profile-reconciler.py  color_picker.py  data-interpolation.py  data-interpolator2.py  data-interpolator3.py  gray_uniformity.py  grid_creator.py  measurements.csv  qr_code_gen.py  requirements.txt  test.py
webcam-settings-dialog-windows-master/: webcamdialog.bat
